adjusted movie stat stripe style to ensure better visibility

--- a/src/components/MovieStatStripe.css
+++ b/src/components/MovieStatStripe.css
@@ -1,13 +1,14 @@
 .movie-details-stat-stripe {
   display: flex;
-  list-style-type: none;
+  justify-content: center;
+  /* list-style-type: none; */
   background-color: var(--color-1b);
   color: white;
 }
 
 .movie-details-stat-stripe-item {
   display: inline-block;
-  flex: 1 1 5rem;
+  margin: 0.5rem 3rem;
   padding: 0.5rem 1rem;
   text-align: center;
   font-size: 1.25rem;
